# pycsvllm

./: .env.example  README.md  main.py  pyproject.toml
benchmark/: benchmark.py
examples/: generate_data.ipynb  main.py
examples/demo/: fix_datetime_error.py  fix_number_error.ipynb  fix_number_error.py  fix_pattern_error.py  fix_reference_value.py  fix_typo_error.py  generate_data.ipynb  generate_schema.ipynb  generate_schema.py  generate_schema_price.py
examples/demo/.ipynb_checkpoints/: fix_datetime_error-checkpoint.ipynb
examples/public/: messy_data.csv  messy_data1.csv  true_data.csv
examples/public/book/: book_messy_data_number.csv  book_messy_data_number_fixed.csv  reference_data.csv
examples/public/company-purchasing-dataset/: clean_pattern_data.csv  cleaned_datetime_data.csv  cleaned_ref_data.csv  cleaned_typo_data.csv  data_handle.ipynb  messy_datetime_spend_analysis_dataset.csv  messy_number_spend_analysis_dataset.csv  messy_pattern_spend_analysis_dataset.csv  messy_ref_spend_analysis_dataset.csv  messy_typo_spend_analysis_dataset.csv
examples/public/economy_delivery_data/: messy_data1.csv  real_data.csv  real_data_generate.csv  real_data_messy.csv  (+4 more)
file_processing/: csv.py  generate_messy_data.py  manager.py  schema.py  sql_generator.py  sqlite.py
llm/: __init__.py  llm.py  prompts.py
llm_providers/: __init__.py  llm.py  prompts.py  prompts_fix_data.py
src/file_processing/: csv.py  generate_messy_data.py  manager.py  regex.py  schema.py  sql_generator.py
src/llm_providers/: __init__.py  llm.py  prompts.py  prompts_fix_data.py
(+3 files in other folders)
