[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.115.8",
    "langchain[groq,openai]>=0.3.19",
    "langchain-core>=0.3.40",
    "langchain-groq>=0.2.4",
    "langchain-openai>=0.3.7",
    "numpy>=2.2.3",
    "pandas>=2.2.3",
    "python-dotenv>=1.0.1",
    "scikit-learn>=1.6.1",
    "langgraph>=0.3.11",
    "pydantic>=2.10.6",
    "typing>=3.10.0.0",
    "langchain-community>=0.3.18",
    "jsonschema>=4.23.0",
    "notebook>=7.3.3",
    "jupyter>=1.1.1",
    "faker>=37.1.0",
    "num2words>=0.5.14",
    "regex>=2024.11.6",
    "rapidfuzz>=3.13.0",
]
